# ory-full-stack

./: Makefile  README.md  docker-compose.yml
api/: Dockerfile  pyproject.toml
api/app/: app.py  common.py  extensions.py  security.py
api/app/api/: views.py
api/app/api/resource/: __init__.py  comment.py  subreddit.py  thread.py
api/app/api/schema/: __init__.py  subreddit.py  thread.py
api/app/auth/: hydra.py  keto.py  kratos.py  middleware.py  views.py
api/app/models/: __init__.py  app.py  base.py  constants.py  helpers.py  subreddit.py  thread.py  user.py
api/app/public/: forms.py  views.py
api/app/templates/oauth/: create_client.html  list_client.html
api/config/: settings.py
api/migrations/versions/: 304019cd1e64_users.py  9c5b0d5c3cf2_added_thread_model.py  aa781f5b126f_app.py
api/tests/: conftest.py
auth/: pyproject.toml
auth/app/: app.py  common.py  extensions.py  middleware.py  security.py
auth/app/auth/: hydra.py  keto.py  kratos.py  middleware.py
auth/app/models/: __init__.py  base.py  user.py
auth/app/public/: views.py
auth/app/templates/oauth/: consent.html
auth/config/: settings.py
cli/: go.mod  go.sum
cli/cmd/cli/: main.go
cli/config/: config.go
cli/oauth2/: oauth2.go
consent/: pyproject.toml
consent/app/: app.py
consent/app/public/: views.py
hydra/: hydra.yml
kratos/: kratos.yml
oathkeeper/: access-rules.yml
